--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "airbnb"
-  ],
+  "extends": ["airbnb"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
@@ -12,41 +10,26 @@
     },
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "class-property"
-  ],
+  "plugins": ["react", "class-property"],
   "rules": {
-    "function-paren-newline":"off",
-    "react/forbid-prop-types":"off",
-
-    "react/jsx-closing-tag-location":"off",
-    "max-len":0,
+    "function-paren-newline": "off",
+    "react/forbid-prop-types": "off",
+    "react/jsx-closing-tag-location": "off",
+    "max-len": 0,
     "linebreak-style": 0,
-    "quotes": [
-      "error",
-      "single"
-    ],
+    "quotes": ["error", "single"],
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
     "jsx-a11y/href-no-hash": "off",
     "react/jsx-closing-bracket-location": "off",
     "jsx-a11y/anchor-is-valid": "off",
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
+    "comma-dangle": ["error", "never"],
     "object-curly-newline": "off",
-    "arrow-parens": [
-      "off"
-    ]
+    "arrow-parens": ["off"]
   },
   "env": {
     "browser": true
